修复判断逻辑，增加pe和国债
